<resources>
    <string name="app_name">pr7</string>

    <string name="fragment_main_button_text1">Купить сумку</string>
    <string name="fragment_main_button_text2">Чек</string>

    <string name="fragment_first_text_view_text1">Введите название сумки</string>
    <string name="fragment_first_text_view_2_text">Введите количество</string>
    <string name="fragment_first_egit_text_hint1">Название сумки</string>
    <string name="fragment_first_egit_text_hint2">Количество сумок</string>
    <string name="fragment_first_button_text">Заказ</string>

    <string name="fragment_second_text_view_text1">Ваш заказ:</string>
    <string name="fragment_second_text_view_text3">Заказ верен?</string>
    <string name="fragment_second_button_text1">Вернуться</string>
    <string name="fragment_second_button_text2">Да</string>

    <string name="fragment_third_button_text">Заказать еще </string>

    <string name="first_fragment_list_view_item_text_view_text1">Название сумки:</string>
    <string name="first_fragment_list_view_item_text_view_text2">Цена:</string>
    <string name="fragment_fourth_text_view_text">Описание сумки:</string>
    <string name="fragment_fourth_button_text">Вернуться к списку сумок</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>