<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SecondFragment">

    <TextView
        android:id="@+id/fragment_second_text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="161dp"
        android:text="@string/fragment_second_text_view_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_second_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="71dp"
        app:layout_constraintStart_toStartOf="@+id/fragment_second_text_view1"
        app:layout_constraintTop_toBottomOf="@+id/fragment_second_text_view1" />


    <TextView
        android:id="@+id/fragment_second_text_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="267dp"
        android:text="@string/fragment_second_text_view_text3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fragment_second_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:backgroundTint="#ff69b4"
        android:text="@string/fragment_second_button_text2"
        app:layout_constraintStart_toStartOf="@+id/fragment_second_text_view3"
        app:layout_constraintTop_toBottomOf="@+id/fragment_second_text_view3" />


</androidx.constraintlayout.widget.ConstraintLayout>